--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,17 @@ body {
     font-family: 'Merriweather Sans', sans-serif;
 }
 
+img {
+    display: block;
+    margin: auto;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+}
+
 .top-container {
     background-color: #E4F9F5;
     position: relative;
-    padding-top: 10%;
+    padding-top: 1%;
 }
 
 #bottom-cloud {
@@ -18,7 +25,7 @@ body {
 #top-cloud {
     position: absolute;
     right: 15%;
-    top: 10%;
+    top: 5%;
 }
 
 h1 {
@@ -53,14 +60,6 @@ a:hover {
     color: #0c5252;
 }
 
-.my-pic {
-    margin-top: 4rem;
-}
-
-.skills-pic {
-    margin: 1rem;
-}
-
 .myIntro {
     width: 50%;
     margin: auto;
@@ -81,7 +80,13 @@ p {
     margin-bottom: 0
 }
 
-.btn {
+.projects-top-link{
+    text-align: right;
+    margin-right: 5%;
+    margin-bottom: 13%;
+}
+
+.btnn {
     background: #11cdd4;
     background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
     background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
@@ -100,7 +105,7 @@ p {
     border: none;
 }
 
-.btn:hover {
+.btnn:hover {
     background: #30e3cb;
     background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
     background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
@@ -121,6 +126,33 @@ p {
     color: #0c5252;
 }
 
+.desc {
+    width: 60%;
+    margin: auto;
+    line-height: 1.5;
+}
+
+.container-fluid {
+    width: 80%;
+    height: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    border: 2px solid #11999E;
+    border-radius: 5%;
+    position: relative;
+}
+
+.tindog {
+    margin-top: 2%;
+    width: 40%;
+    height: auto;
+}
+
+.right, .left {
+    color: #0c5252;
+    position: absolute;
+}
+
 @media (max-width: 844px) {
     h1 {
         font-size: 4rem;
@@ -128,6 +160,10 @@ p {
 
     h2 {
         font-size: 1rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
     }
 
     #bottom-cloud {
@@ -138,10 +174,10 @@ p {
     #top-cloud {
         position: absolute;
         right: 10%;
-        top: 7%;
+        top: 3%;
     }
 
-    .my-pic, .skills-pic {
+    .my-pic, .skills-pic, .projects-pic {
         width: 30%;
         height: auto;
     }
@@ -160,12 +196,16 @@ p {
     #top-cloud {
         position: absolute;
         right: 5%;
-        top: 5%;
+        top: 1%;
     }
 
     .mountain-image {
         width: 70%;
         height: auto;
+    }
+
+    h3 {
+        font-size: 1.2rem;
     }
 }
 
@@ -191,13 +231,17 @@ p {
     #top-cloud {
         position: absolute;
         right: 5%;
-        top: 5%;
-        width: 20%;
+        top: 0.1%;
+        width: 15%;
         height: auto;
     }
 
     h1 {
         font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 1rem;
     }
 }
 
@@ -206,9 +250,30 @@ p {
         font-size: 2rem;
     }
 
+    h3 {
+        font-size: 0.8rem;
+    }
+    #top-cloud {
+        right: 10%;
+        top: 60%;
+    }
+
     table {
         max-width: 100%;
         height: auto;
         border-spacing: 3rem 0.5rem;
+    }
+
+    .container-fluid {
+        width: 90%;
+    }
+
+    .ss {
+        font-size: 15px;
+        margin: 0.5rem auto 1.5rem auto;
+    }
+
+    .tindog {
+        margin-bottom: 1%;
     }
 }
